# tracers

./: .gitignore  README.md  ci.sh  pyproject.toml
client/: .eslintrc  package.json  webpack.config.js
client/src/: index.jsx
examples/: async.output  async.py  async_disabled_in_production.output  async_disabled_in_production.py  async_disabled_logging.output  async_disabled_logging.py  async_with_skewed_loop.output  async_with_skewed_loop.py  consecutive_equal_calls.output  consecutive_equal_calls.py  sync.output  sync.py  with_detailed_tracers.output  with_detailed_tracers.py  with_tracers.output  with_tracers.py  with_tracers_overriding_name.output  with_tracers_overriding_name.py  without_tracers.py
infra/: main.tf
infra/aws/: main.tf
infra/aws/dynamodb/: main.tf
sdk/: pyproject.toml
sdk/test/: test_utils.py
sdk/tracers/: analyzers.py  config.py  constants.py  containers.py  contextvars.py  daemon.py  graphql.py  utils.py
sdk/tracers/function/: __init__.py
server/: pyproject.toml
server/backend/: config.py  typing.py
server/backend/api/schema/: mutation.py  types.py
server/backend/dal/aws/: dynamodb.py
server/backend/domain/: system.py
server/backend/utils/: aio.py  function.py  jwt.py
server/server/: asgi.py  authc.py  config.py
server/server/api/schema/: mutation.py  query.py  types.py
server/server/authc/: claims.py
server/server/dal/aws/: dynamodb.py
server/server/domain/: system.py  tenant.py  user.py
server/server/utils/: aio.py  crypto.py  encodings.py  jwt.py
server/templates/: index.html
src/backend/: pyproject.toml
src/backend/backend/: asgi.py  config.py  typing.py
src/backend/backend/api/schema/: mutation.py  query.py  types.py
src/backend/backend/authc/: claims.py
src/backend/backend/dal/aws/: dynamodb.py
src/backend/backend/domain/: system.py  transaction.py
src/backend/backend/domain/aws/: transaction.py
src/backend/backend/utils/: aio.py  apm.py  function.py  jwt.py
src/front/: .eslintrc  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.ts
src/front/static/: index.html
src/sdk/: pyproject.toml
src/sdk/tracers/: analyzers.py  config.py  constants.py  containers.py  contextvars.py  daemon.py  graphql.py  utils.py
src/sdk/tracers/function/: __init__.py
src/tracers/: __init__.py  analyzers.py  constants.py  containers.py  contextvars.py  daemon.py  utils.py
src/tracers/function/: __init__.py
