[tool.poetry]
authors = [
  "Kevin Amado <kamadorueda@gmail.com>"
]
description = "Open-Source APM (Application monitoring) project that offers you minimal overhead wrappers for profiling your code execution flow"
license = "MIT"
name = "tracers"
packages = [
  { include = "tracers" },
]
readme = "../README.md"
repository = "https://github.com/fluidattacks/tracers"
version = "1.0.0"

[tool.poetry.dependencies]
aioboto3 = "8.0.3"
aiogqlc = "1.0.5"
more-itertools = "8.4.0"
python = "^3.7"

[tool.poetry.dev-dependencies]
prospector = "1.2.0"
python-dateutil = "2.8.1"
mypy = "0.770"

[build-system]
requires = [
  "poetry>=0.12"
]
build-backend = "poetry.masonry.api"
