[tool.poetry]
authors = [
  "Kevin Amado <kamadorueda@gmail.com>"
]
description = "Open-Source APM (Application monitoring) project that offers you minimal overhead wrappers for profiling your code execution flow"
license = "MIT"
name = "server"
packages = [
  { include = "server" },
]
repository = "https://github.com/kamadorueda/tracers"
version = "1.0.0"

[tool.poetry.dependencies]
aioboto3 = "8.0.3"
graphene = "2.1.8"
jwcrypto = "0.7"
python = "^3.7"
python-dateutil = "2.8.1"
starlette = "0.13.4"
tracers = "*"
uvicorn = "0.11.5"

[tool.poetry.dev-dependencies]
prospector = "1.2.0"
python-dateutil = "2.8.1"
mypy = "0.770"

[build-system]
requires = [
  "poetry>=0.12"
]
build-server = "poetry.masonry.api"
