[tool.poetry]
authors = [
  "Kevin Amado <kamadorueda@gmail.com>"
]
description = "Open-Source APM (Application monitoring) project that offers you zero overhead wrappers for profiling your code execution flow"
license = "MIT"
name = "backend"
packages = [
  { include = "backend" },
]
repository = "https://github.com/kamadorueda/tracers"
version = "1.0.0"

[tool.poetry.dependencies]
aioboto3 = "8.0.3"
graphene = "2.1.8"
python = "^3.7"
starlette = "0.13.4"
uvicorn = "0.11.5"

[tool.poetry.dev-dependencies]
prospector = "1.2.0"
python-dateutil = "2.8.1"
mypy = "0.770"

[build-system]
requires = [
  "poetry>=0.12"
]
build-backend = "poetry.masonry.api"
